--- a/index.html
+++ b/index.html
@@ -43,5 +43,7 @@
             <div class="link">Already signed up? <a href="#">Login now</a></div>
         </section>
     </div>
+
+    <script src="javascript/pass-show-hide.js"></script>
 </body>
 </html>
