--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="field input">
                     <label>Password</label>
-                    <input type="text" placeholder="Enter new password">
+                    <input type="password" placeholder="Enter new password">
                     <i class="fas fa-eye"></i>
                 </div>
                 <div class="field image">
@@ -44,6 +44,6 @@
         </section>
     </div>
 
-    <script src="javascript/pass-show-hide.js"></script>
+    <script src="./javascript/pass-show-hide.js"></script>
 </body>
 </html>
